Replace: place holder pastry img with appropriate img such as cookies and coffees for the various section

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
 								<li id="carousel__slide--cookies"class="carousel__slide">
 									<ul class="flex-row menu-options">
 										<li class="product-card">
-											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
+											<img src="css/assets/img/cookies-goods/cookie-good-1.png" alt="Fresh Pastry 01">
 											<div class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 01</h4>
+													<h4>Cookies 01</h4>
 													<span>5$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
@@ -231,47 +231,47 @@
 											<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 02</h4>
+													<h4>Cookies 02</h4>
 													<span>10$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
+											<img src="css/assets/img/cookies-goods/cookie-good-3.png" alt="Fresh Pastry 03">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 03</h4>
+													<h4>Cookies 03</h4>
 													<span>7$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
+											<img src="css/assets/img/cookies-goods/cookie-good-4.png" alt="Fresh Pastry 04">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 04</h4>
+													<h4>Cookies 04</h4>
 													<span>5$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
+											<img src="css/assets/img/cookies-goods/cookie-good-5.png" alt="Fresh Pastry 05">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 05</h4>
+													<h4>Cookies 05</h4>
 													<span>5$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 05">
+											<img src="css/assets/img/cookies-goods/cookie-good-6.png" alt="Fresh Pastry 05">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 06</h4>
+													<h4>Cookies 06</h4>
 													<span>15$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
@@ -283,60 +283,60 @@
 								<li id="carousel__slide--coffee" class="carousel__slide">
 									<ul class="flex-row menu-options">
 										<li class="product-card">
-											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
+											<img src="css/assets/img/coffee-goods/Coffee good 1.png" alt="Fresh Pastry 01">
 											<div class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 01</h4>
+													<h4>Coffee 01</h4>
 													<span>5$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
+											<img src="css/assets/img/coffee-goods/Coffee good 2.png" alt="Fresh Pastry 02">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 02</h4>
+													<h4>Coffee 02</h4>
 													<span>10$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
+											<img src="css/assets/img/coffee-goods/Coffee good 3.png" alt="Fresh Pastry 03">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 03</h4>
+													<h4>Coffee 03</h4>
 													<span>7$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
+											<img src="css/assets/img/coffee-goods/Coffee good 4.png" alt="Fresh Pastry 04">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 04</h4>
+													<h4>Coffee 04</h4>
 													<span>5$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
+											<img src="css/assets/img/coffee-goods/Coffee good 5.png" alt="Fresh Pastry 05">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 05</h4>
+													<h4>Coffee 05</h4>
 													<span>5$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
 											</div>
 										</li>
 										<li class="product-card">
-											<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 05">
+											<img src="css/assets/img/coffee-goods/Coffee good 6.png" alt="Fresh Pastry 05">
 											<div  class="card-body flex-column">
 												<div class="flex-row main-product-info width-100">
-													<h4>Pastry 06</h4>
+													<h4>Coffee 06</h4>
 													<span>15$</span>
 												</div>
 												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
