WIP Phone Responsiveness: fixed about-us img + part of header nav responsiveness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<title>Bakery-Caffe</title>
 
-		<meta name ="viewport" content="with=device-width, initial-scale=1.0"><!--added this not sure what it does-->
+		<meta name ="viewport" content="with=device-width, initial-scale=1"><!--added this not sure what it does-->
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet"  href="css/style.css">
@@ -19,7 +19,7 @@
 		<div class="bg-img" id="parallax">
 
 			
-			<header class="width-100 main-color-01">
+			<header class=" main-color-01">
 
 				<div class="mini-logo__div">
 					<a class="mini-logo-anchor" href="" >
