--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 		<title>Bakery-Caffe</title>
 
-		<meta name ="viewport" content="with=device-width, initial-scale=1"><!--added this not sure what it does-->
+		<meta name ="viewport" content="with=device-width, initial-scale=1"/><!--added this not sure what it does-->
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet"  href="css/style.css">
