--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 		<title>Bakery-Caffe</title>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><!--added this not sure what it does-->
+		<meta name="viewport" content="width=device-width, initial-scale=.5, maximum-scale=12.0, minimum-scale=.25, user-scalable=yes"/>
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet"  href="css/style.css">
