Fix: mobile nav bar interferingiwth menu nav selection

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes"><!--need to addd description--> 
+    	<meta name="description" content="Cafe backery restaurant page">
     	<meta name="keywords" content="one, two, three">
 
 		<title>Bakery-Caffe</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=12.0, minimum-scale=1, user-scalable=yes"/>
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> -->
 		 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -33,28 +32,22 @@
 					<span class="sr-only">Menu</span>
 				</button>
 
-				<div class="height-100"> <!--might need to remove this div class, I put it here for potential styling purposes-->
-					<nav class="nav-body height-100 brown-text" data-visible="false">
-						<ul data-visible="false" class="nav-option flex-row ">
-							<!-- <li class="hoverGlow"><a href="#come-visit">Location</a></li> -->
-							<li class="hoverGlow" ><a href="#our-goods">Menu</a></li>
-							<li class="hoverGlow" ><a href="#about-us">About Us</a></li>
-						</ul>
-						<ul  class="nav-option flex-row">
-							<li class="hoverGlow" ><a href="#come-visit">Contact Us</a></li>
-							<!-- <li class="hoverGlow" ><a href="">Hiring</a></li> -->
-							<li>
-								<ul data-visible="false" class="flex-row social-icons ">
-									<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
-									<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
-									<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</div>
-
-
+				<nav class="nav-body height-100 brown-text" data-visible="false">
+					<ul data-visible="false" class="nav-option flex-row ">
+						<li class="hoverGlow" ><a href="#our-goods">Menu</a></li>
+						<li class="hoverGlow" ><a href="#about-us">About Us</a></li>
+					</ul>
+					<ul  class="nav-option flex-row">
+						<li class="hoverGlow" ><a href="#come-visit">Contact Us</a></li>
+						<li>
+							<ul data-visible="false" class="flex-row social-icons ">
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
+								<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
 			</header>
 
 
