Implement: seo html meta info

--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="Cafe backery restaurant page">
-    	<meta name="keywords" content="one, two, three">
-
-		<title>Bakery-Caffe</title>
-
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=12.0, minimum-scale=1, user-scalable=yes"/>
-		 
-		<!-- external CSS link -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+		<title>Cafe Boulange</title>
+		<meta name="description" content="Cafe Boulange is a responsive single-page website for a modern bakery and cafe, featuring an inviting design.">
+	
+		<!-- Open Graph Meta Data -->
+		<meta property="og:title" content="Cafe Boulange">
+		<meta property="og:description" content="Cafe Boulange is a responsive single-page website for a modern bakery and cafe, featuring an inviting design.">
+		<meta property="og:image" content="https://fabianoglentini.github.io/Website_Coffee_Backery/css/assets/Meta_img/Cafe-Boulange_WebSiteTittle-Display.jpg">
+		<meta property="og:url" content="https://cafe-backery-demo.netlify.app/">
+	
+		<!-- Twitter Meta Data-->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Cafe Boulange">
+		<meta name="twitter:description" content="Cafe Boulange is a responsive single-page website for a modern bakery and cafe, featuring an inviting design.">
+		<meta name="twitter:image" content="https://fabianoglentini.github.io/Website_Coffee_Backery/css/assets/Meta_img/Cafe-Boulange_WebSiteTittle-Display.jpg">
+	
+		<!-- External CSS -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet"  href="css/style.css">
+		<link rel="stylesheet" href="css/style.css">
+	
 	</head>
 	<body>
 
