Fix: seo errors

--- a/index.html
+++ b/index.html
@@ -33,24 +33,13 @@
 
 	<script type="application/ld+json">
 		{
-			"@context": "https//schema.org",
+			"@context": "https://schema.org/",
 			"@type": "Bakery",
 			"name": "Cafe Boulange",
-			"description": "Cafe Boulange is a responsive single-page demo website for a modern bakery and cafe, featuring an inviting design."
-			"url": "https://cafe-backery-demo.netlify.app/"
+			"description": "Cafe Boulange is a responsive single-page demo website for a modern bakery and cafe, featuring an inviting design.",
+			"url": "https://cafe-backery-demo.netlify.app/",
+			"location": "fictional location",
 			"image": "https://fabianoglentini.github.io/Website_Coffee_Backery/css/assets/Meta_img/Cafe-Boulange_WebSiteTittle-Display.jpg"
-			"hasProduct": [
-				{
-				"@type": "Product",
-				"name": "Coffee",
-				"description": "Fresh home brew coffee both hot and cold brew"
-			},
-			{
-				"@type"	: "Product",
-				"name": "Bread"
-				"description": "Freshly baked bread of all kinds"
-			}
-			]
 		}
 
 	</script>
